fix a bug in Repeated